# Img2txt

./: .gitignore  CMakeLists.txt  README.md
gui/: Backend.cpp  Backend.h  CMakeLists.txt  ImageContainer.cpp  ImageContainer.h  main.cpp  main.qml
lib/: CMakeLists.txt  Img2txt.cpp  Img2txt.h  TxtDetect.cpp  TxtDetect.h
